Modulo Core creado  JUnit funcionando en Core  Configuración para ejecutar los test del Core ( no se crearla desde gradle así que comparto el xml de idea )

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ proguard/
 
 # Android Studio
 .DS_Store
-.idea/
+.idea/*.xml
+.idea/.name
+.idea/copyright/
+.idea/libraries/
+.idea/scopes/
 .gradle
 /*/local.properties
 /*/out
