--- a/mentora/build.gradle
+++ b/mentora/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile project(':core')
     androidTestCompile 'org.robolectric:robolectric:2.+'
     androidTestCompile 'junit:junit:4.+'
+    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.google.android.gms:play-services:4.2.42'
 }
