--- a/mentora/build.gradle
+++ b/mentora/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'android'
-apply plugin: 'robolectric'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 14
@@ -25,8 +24,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':core')
-    androidTestCompile 'org.robolectric:robolectric:2.+'
     androidTestCompile 'junit:junit:4.+'
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.google.android.gms:play-services:4.2.42'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 }
