--- a/mentora/build.gradle
+++ b/mentora/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':core')
     androidTestCompile 'junit:junit:4.+'
+    compile 'com.squareup.dagger:dagger:1.2.+'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.jakewharton:butterknife:5.1.1'
 }
